picoC: add a delete button to editor
This button allows erasing a file from UAV flash filesystem.

--- a/ground/gcs/src/plugins/picoc/picoc.qrc
+++ b/ground/gcs/src/plugins/picoc/picoc.qrc
@@ -7,5 +7,6 @@
         <file>images/down_alt.png</file>
         <file>images/down_rom.png</file>
         <file>images/up_rom.png</file>
+        <file>images/trash.png</file>
     </qresource>
 </RCC>
