--- a/ground/gcs/src/plugins/picoc/picoc.ui
+++ b/ground/gcs/src/plugins/picoc/picoc.ui
@@ -178,6 +178,26 @@
       </widget>
      </item>
      <item>
+      <widget class="QToolButton" name="tbEraseFromUAVROM">
+       <property name="toolTip">
+        <string>Erase from UAV ROM</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="picoc.qrc">
+         <normaloff>:/picoc/images/trash.png</normaloff>:/picoc/images/trash.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
