picoC: add start button to user interface
This adds a start button to the user interface. Also Test and Exit
values are shown.

--- a/ground/gcs/src/plugins/picoc/picoc.qrc
+++ b/ground/gcs/src/plugins/picoc/picoc.qrc
@@ -8,5 +8,6 @@
         <file>images/down_rom.png</file>
         <file>images/up_rom.png</file>
         <file>images/trash.png</file>
+        <file>images/execute.png</file>
     </qresource>
 </RCC>
