GCS/Uploader: rename Uploaderng to Uploader
Now this replaces the Uploader widget no need for new
name.

--- a/ground/gcs/src/plugins/uploader/uploader.qrc
+++ b/ground/gcs/src/plugins/uploader/uploader.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/uploaderng">
+    <qresource prefix="/uploader">
         <file>images/system-run.svg</file>
         <file>images/process-stop.svg</file>
         <file>images/dialog-apply.svg</file>
